--- a/HalalGuide/Base.lproj/MainStoryboard.storyboard
+++ b/HalalGuide/Base.lproj/MainStoryboard.storyboard
@@ -76,6 +76,21 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="myg-T8-hCc">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="myg-T8-hCc" id="0Ac-5d-BtJ">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="ktu-oF-RPu">
+                                                    <rect key="frame" x="8" y="7" width="304" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <state key="normal" title="Nulstil introduktion">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                </button>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -90,6 +105,7 @@
                         <outlet property="clearCache" destination="ui0-Sy-5Bj" id="Wdo-Vx-T1l"/>
                         <outlet property="reset" destination="nZb-hu-Fk5" id="mF4-QG-MFX"/>
                         <outlet property="resetFilter" destination="EDw-O7-QfW" id="9KW-QH-ldW"/>
+                        <outlet property="resetIntro" destination="ktu-oF-RPu" id="XCk-0M-iC3"/>
                         <outlet property="restorePurchases" destination="h5h-5l-hYb" id="XXd-uj-IR0"/>
                         <outlet property="support" destination="MbM-j1-vft" id="47L-A3-hBD"/>
                     </connections>
@@ -631,7 +647,7 @@
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
                                             <textField opaque="NO" clipsSubviews="YES" tag="100" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Navn*" minimumFontSize="17" id="Geq-xg-rWm">
-                                                <rect key="frame" x="121.00000052481282" y="20" width="187" height="30"/>
+                                                <rect key="frame" x="121" y="20" width="187.00000071355555" height="30"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" spellCheckingType="no"/>
@@ -640,7 +656,7 @@
                                                 </connections>
                                             </textField>
                                             <textField opaque="NO" clipsSubviews="YES" tag="101" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Vej*" minimumFontSize="17" id="LGW-5Q-Byj" customClass="HTAutocompleteTextField">
-                                                <rect key="frame" x="121" y="58" width="131.9999984925679" height="30"/>
+                                                <rect key="frame" x="121" y="58" width="131.9999981929173" height="30"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
