--- a/HalalGuide/Base.lproj/MainStoryboard.storyboard
+++ b/HalalGuide/Base.lproj/MainStoryboard.storyboard
@@ -647,7 +647,7 @@
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
                                             <textField opaque="NO" clipsSubviews="YES" tag="100" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Navn*" minimumFontSize="17" id="Geq-xg-rWm">
-                                                <rect key="frame" x="121" y="20" width="187.00000071355555" height="30"/>
+                                                <rect key="frame" x="121.00000086386224" y="20" width="187" height="30"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" spellCheckingType="no"/>
@@ -656,7 +656,7 @@
                                                 </connections>
                                             </textField>
                                             <textField opaque="NO" clipsSubviews="YES" tag="101" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Vej*" minimumFontSize="17" id="LGW-5Q-Byj" customClass="HTAutocompleteTextField">
-                                                <rect key="frame" x="121" y="58" width="131.9999981929173" height="30"/>
+                                                <rect key="frame" x="120.99999796600798" y="58" width="132" height="30"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
@@ -1251,6 +1251,20 @@
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </view>
+                                <view key="tableFooterView" contentMode="scaleToFill" id="gSO-et-58C">
+                                    <rect key="frame" x="0.0" y="489" width="320" height="63"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Der findes ingen anmeldelser for dette sted endnu. Skal du være den første?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="B1F-cf-r4D">
+                                            <rect key="frame" x="8" y="8" width="304" height="47"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </view>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Review" id="B6a-fa-QWh" customClass="ReviewCell">
                                         <autoresizingMask key="autoresizingMask"/>
@@ -1312,6 +1326,7 @@
                         <outlet property="halalLabel" destination="JrV-y3-CqQ" id="jSu-Nd-php"/>
                         <outlet property="name" destination="9p4-19-Nu5" id="mHG-tR-AhH"/>
                         <outlet property="noPicturesLabel" destination="Jx9-ch-ntf" id="6rI-ng-RDx"/>
+                        <outlet property="noReviewsLabel" destination="B1F-cf-r4D" id="sg7-49-XtN"/>
                         <outlet property="pictures" destination="KVr-rJ-Ddu" id="Pl7-kS-Qza"/>
                         <outlet property="porkImage" destination="g0o-QC-owI" id="S1n-Tj-klF"/>
                         <outlet property="porkLabel" destination="j1o-Dt-1ch" id="PBi-VA-rTB"/>
